--- a/dllexports/Cargo.toml
+++ b/dllexports/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+binms = { path = "../binms" }
 clap = { version = "4.5", features = ["derive"] }
 expandms = { path = "../expandms" }
