--- a/binms/Cargo.toml
+++ b/binms/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2024"
 
 [dependencies]
 bitflags = "2.9.1"
+display-bytes = { path = "../display-bytes" }
+from-to-repr = { version = "0.2.2", features = ["from_to_other"] }
