--- a/expandms/Cargo.toml
+++ b/expandms/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 bitflags = "2.9.1"
 display-bytes = { path = "../display-bytes" }
+from-to-repr = { version = "0.2.2", features = ["from_to_other"] }
