--- a/dllexports/Cargo.toml
+++ b/dllexports/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 binms = { path = "../binms" }
 clap = { version = "4.5", features = ["derive"] }
 expandms = { path = "../expandms" }
+tracing = { version = "0.1" }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
