initial work on inflating DEFLATEd files

--- a/expandms/Cargo.toml
+++ b/expandms/Cargo.toml
@@ -8,3 +8,6 @@ bitflags = "2.9.1"
 display-bytes = { path = "../display-bytes" }
 from-to-repr = { version = "0.2.2", features = ["from_to_other"] }
 tracing = { version = "0.1" }
+
+[dev-dependencies]
+tracing-test = { version = "0.2", features = ["no-env-filter"] }
