--- a/dllexports/Cargo.toml
+++ b/dllexports/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 binms = { path = "../binms" }
 clap = { version = "4.5", features = ["derive"] }
+display-bytes = { path = "../display-bytes" }
 expandms = { path = "../expandms" }
 tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
