--- a/expandms/Cargo.toml
+++ b/expandms/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 bitflags = "2.9.1"
 display-bytes = { path = "../display-bytes" }
 from-to-repr = { version = "0.2.2", features = ["from_to_other"] }
+lzxd = { version = "0.2" }
 tracing = { version = "0.1" }
 
 [dev-dependencies]
