don't bother with extraction, better output format, add export filtering

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [workspace]
 members = [
-    "binms", "display-bytes",
+    "binms",
+    "display-bytes",
     "dllexports",
     "expandms",
+    "filtexp",
 ]
 resolver = "2"
