--- a/binms/Cargo.toml
+++ b/binms/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2024"
 bitflags = "2.9.1"
 display-bytes = { path = "../display-bytes" }
 from-to-repr = { version = "0.2.2", features = ["from_to_other"] }
+serde = { version = "1.0", features = ["derive"], optional = true }
 tracing = { version = "0.1" }
+
+[features]
+serde = ["dep:serde", "display-bytes/serde"]
