--- a/binms/Cargo.toml
+++ b/binms/Cargo.toml
@@ -11,4 +11,4 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 tracing = { version = "0.1" }
 
 [features]
-serde = ["dep:serde", "display-bytes/serde"]
+serde = ["dep:serde", "bitflags/serde", "display-bytes/serde"]
