--- a/filtexp/Cargo.toml
+++ b/filtexp/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
-regex = { version = "1.11" }
+rhai = { version = "1.22" }
 serde_json = { version = "1.0" }
