winunpack: initial work on comfort ext traits
The 7-zip COM API almost always returns HRESULT and passes the actual
return value through pointer parameters. Write a few creature-comfort
extension traits that map the HRESULT to a Result and pass the return
value as a return value.

Most of the COM APIs in the windows crate ship with these creature
comforts, but the code generated by the #[interface] macro is rather
low-level in comparison.

--- a/winunpack-win/Cargo.toml
+++ b/winunpack-win/Cargo.toml
@@ -4,12 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+from-to-repr = { version = "0.2", features = ["from_to_other"] }
 windows-core = { version = "0.62" }
+winunpack-macros = { path = "../winunpack-macros" }
 
 [dependencies.windows]
 version = "0.62"
 features = [
     "Win32_Foundation",
     "Win32_System_Com_StructuredStorage",
+    "Win32_System_LibraryLoader",
     "Win32_System_Variant",
 ]
