--- a/winunpack-win/Cargo.toml
+++ b/winunpack-win/Cargo.toml
@@ -4,15 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5", features = ["derive"] }
 from-to-repr = { version = "0.2", features = ["from_to_other"] }
 windows-core = { version = "0.62" }
-winunpack-macros = { path = "../winunpack-macros" }
+windows-implement = { version = "0.60" }
+z7_com = { path = "../z7_com" }
 
 [dependencies.windows]
 version = "0.62"
 features = [
     "Win32_Foundation",
-    "Win32_System_Com_StructuredStorage",
     "Win32_System_LibraryLoader",
-    "Win32_System_Variant",
 ]
