--- a/winunpack-win/Cargo.toml
+++ b/winunpack-win/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 from-to-repr = { version = "0.2", features = ["from_to_other"] }
+sxd-document = { version = "0.3" }
 windows-core = { version = "0.62" }
 windows-implement = { version = "0.60" }
 z7_com = { path = "../z7_com" }
