--- a/z7_com/Cargo.toml
+++ b/z7_com/Cargo.toml
@@ -5,14 +5,16 @@ edition = "2024"
 
 [dependencies]
 windows-core = { version = "0.62" }
+windows-link = { version = "0.2" }
 
-[dependencies.windows]
-version = "0.62"
+[dependencies.windows-sys]
+version = "0.61"
 features = [
     "Win32_Foundation",
     "Win32_System_Com_StructuredStorage",
     "Win32_System_Variant",
 ]
+default-features = false
 
 [build-dependencies]
 windows-bindgen = { version = "0.65" }
