--- a/z7_com/z7_metadata/.gitignore
+++ b/z7_com/z7_metadata/.gitignore
@@ -9,6 +9,8 @@ Windows.Win32.winmd
 
 # tools
 ilasm.exe
+ilasm
 # not required but you might have it next to ilasm:
 ildasm.exe
+ildasm
 Windows.Win32.il
