--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ members = [
     "dllexports",
     "expandms",
     "filtexp",
-    "winunpack-win",
-    "z7_com",
+    "winunpack",
 ]
 resolver = "2"
